# mcp-pcb-emcopilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_REVIEW_REPORT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: CLAUDE_REVIEW_PLAYBOOK.md  MARKET_INTAKE_MATRIX.md  MCP_PCB_EMCopilot_Framework.docx  SELF_CRITIQUE_CHECKLIST.md  STANDARDS_COVERAGE_MATRIX.md  architecture.md  generate_framework_doc.py  index.md  tools.md  usage.md
docs/superpowers/plans/: 2026-03-12-v1-production-ready.md  2026-03-13-report-builder.md
docs/superpowers/specs/: 2026-03-13-report-builder-design.md
examples/: README.md  cispr25_quick_scan.md
kicad_plugin/: README.md  __init__.py  emcopilot_plugin.py  metadata.json
src/mcp_pcb_emcopilot/: __init__.py  errors.py  market_packs.py  orchestrator.py  review_context.py  review_playbook.py  server.py  session.py
src/mcp_pcb_emcopilot/analyzers/: __init__.py  comparison.py  stackup_optimizer.py
src/mcp_pcb_emcopilot/analyzers/antenna/: __init__.py  cable_coupling.py  common_mode.py  slot_antenna.py  trace_antenna.py
src/mcp_pcb_emcopilot/analyzers/dfm/: __init__.py  assembly_check.py  component_placement.py  solder_paste.py  thermal_relief.py  tolerance_analysis.py
src/mcp_pcb_emcopilot/analyzers/emc/: __init__.py  automotive_emc.py  clock_emi_analyzer.py  compliance_predictor.py  conducted_emissions.py  current_density.py  current_loop.py  emi_risk_scorer.py  esd_assessment.py  filter_design.py  ground_island_analyzer.py  grounding.py  immunity.py  limits_provider.py  near_field.py  radiated_emissions.py  return_path_analyzer.py  rf_isolation_analyzer.py  shielding.py  smps_loop_analyzer.py
src/mcp_pcb_emcopilot/analyzers/high_speed/: __init__.py  ddr_analyzer.py  ddr_topology.py  emmc_analyzer.py  ethernet_analyzer.py  length_matching.py  pcie_analyzer.py  pcie_link_budget.py  sdio_analyzer.py  usb_analyzer.py
src/mcp_pcb_emcopilot/analyzers/power_integrity/: __init__.py  cavity_resonance.py  current_profiler.py  decap_adequacy_checker.py  decap_placement.py  pdn_analyzer.py  pdn_impedance.py  power_plane_analyzer.py  trace_current_validator.py  vrm_analyzer.py
src/mcp_pcb_emcopilot/analyzers/rf_si/: __init__.py  coexistence_analyzer.py  crosstalk_analyzer.py  differential_pair.py  eye_diagram.py  gnss_analyzer.py  halow_analyzer.py  impedance_calculator.py  mode_conversion.py  rf_impedance_analyzer.py  rf_simulation_extractor.py  sparam_calculator.py  sparam_extractor.py  via_modeler.py
src/mcp_pcb_emcopilot/analyzers/schematic/: __init__.py  _normalise.py  component_rating.py  decoupling_per_ic.py  power_topology.py  protection_circuits.py  signal_flow.py
src/mcp_pcb_emcopilot/analyzers/signal_integrity/: __init__.py  crosstalk_analyzer.py  diff_pair_width_checker.py  ibis_eye.py  impedance_validator.py  return_path_viz.py
src/mcp_pcb_emcopilot/analyzers/thermal/: __init__.py  copper_spreading.py  hotspot_detector.py  power_dissipation.py  thermal_via.py
src/mcp_pcb_emcopilot/classifiers/: __init__.py  design_classifier.py  interface_detector.py  net_classifier.py
src/mcp_pcb_emcopilot/integrations/: drawio_bridge.py  external_actions.py  nec2_bridge.py  openems_bridge.py  regulations_bridge.py
src/mcp_pcb_emcopilot/models/: __init__.py  common.py  pcb_data.py
src/mcp_pcb_emcopilot/parsers/: __init__.py  _pin_net_geometric.py  allegro_parser.py  altium_parser.py  bom_parser.py  gerber_parser.py  ibis_parser.py  ipc2581_parser.py  kicad_pcb_parser.py  netlist_parser.py  odb_models.py  odb_parser.py  pdf_schematic_parser.py  schematic_dispatch.py  schematic_parser.py  stackup_parser.py  step_parser.py  touchstone_parser.py
src/mcp_pcb_emcopilot/reports/: __init__.py  docx_report.py  eco_generator.py  html_report.py  recommendation_engine.py  report_builder.py  section_registry.py  simulation_plots.py  test_plan.py  tracked_finding.py
src/mcp_pcb_emcopilot/standards/: __init__.py  coverage.py  preflight.py
src/mcp_pcb_emcopilot/visualization/: __init__.py  annotator.py  board_renderer.py  exporter.py  finding_annotator.py  stackup_renderer.py
src/mcp_pcb_emcopilot/web/: __init__.py  app.py  cli.py
tests/: conftest.py  test_all_tools_smoke.py  test_allegro_parser.py  test_altium_parameter_records.py  test_altium_parser_smoke.py  test_analysis_cache.py  test_automotive_emc.py  test_cavity_resonance.py  test_comparison.py  test_conducted_emissions.py  test_current_density_and_emi.py  test_drawio_bridge.py  test_end_to_end_review.py  test_errors.py  test_export_and_report.py  test_external_actions.py  test_eye_and_ddr.py  test_filter_design.py  test_format_detection.py  test_gerber_parser.py  test_html_report.py  test_ibis_eye.py  test_ibis_parser.py  test_immunity.py  test_integration_odb.py  test_ipc2581_parser.py  test_kicad_parser.py  test_kicad_plugin.py  test_kicad_schematic_parser.py  test_limits_provider.py  test_low_coverage_analyzers.py  test_low_coverage_parsers.py  test_more_coverage.py  test_near_field.py  test_nec2_bridge.py  test_netlist_parser.py  test_odb_synthetic_fixture.py  test_openems_attach_loop.py  test_openems_bridge.py  test_orchestrator.py  (+31 more)
tests/fixtures/: README.md  generate_schematic_pdf.py  mixed_signal_4layer.kicad_pcb  sample.SchDoc  sample.ibis  sample.s2p  sample_2sheet.kicad_sch  sample_allegro.txt  sample_channel.s2p  sample_design.xml  sample_io.ibs  sample_netlist.NET  sample_top_copper.gbr  simple_2layer.kicad_pcb
web-ui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
web-ui/src/: main.tsx  styles.css
web-ui/src/__tests__/: app.test.tsx  smoke.test.tsx
web-ui/src/api/: client.ts
web-ui/src/components/: ThermalMapViewer.tsx
web-ui/src/pages/: AIReviewPage.tsx  AnalysisReportPage.tsx  FindingsViewerPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ResultsViewerPage.tsx  RuleEditorPage.tsx  RuleViolationsPage.tsx  SimulationConfigPage.tsx  ViolationsPanel.tsx
(+14 files in other folders)
