[project]
name = "mcp-pcb-emcopilot"
version = "0.2.0"
description = "MCP server for PCB design review, EMC analysis, and signal integrity"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Adam Engelbrecht", email = "adam@rfingadam.com" }
]
keywords = ["mcp", "pcb", "emc", "signal-integrity", "design-review", "gerber", "rf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
altium = ["olefile>=0.47"]
excel = ["openpyxl>=3.1.0"]
sparams = ["numpy>=1.26"]
ground = ["networkx>=3.2"]
pdf = ["pymupdf>=1.24.0"]
all = [
    "olefile>=0.47",
    "openpyxl>=3.1.0",
    "numpy>=1.26",
    "networkx>=3.2",
    "pymupdf>=1.24.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "cairosvg>=2.7",
    "python-docx>=1.1",
]
report = [
    "cairosvg>=2.7",
    "python-docx>=1.1",
]

[project.urls]
Homepage = "https://github.com/RFingAdam/mcp-pcb-emcopilot"
Documentation = "https://github.com/RFingAdam/mcp-pcb-emcopilot#readme"
Repository = "https://github.com/RFingAdam/mcp-pcb-emcopilot"
Issues = "https://github.com/RFingAdam/mcp-pcb-emcopilot/issues"

[project.scripts]
mcp-pcb-emcopilot = "mcp_pcb_emcopilot.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pcb_emcopilot"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
