[project]
name = "mcp-pcb-emcopilot"
version = "0.2.0"
description = "MCP server for PCB design review, EMC analysis, and signal integrity"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Adam Engelbrecht", email = "adam@rfingadam.com" }
]
keywords = ["mcp", "pcb", "emc", "signal-integrity", "design-review", "gerber", "rf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "matplotlib>=3.10.8",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
altium = ["olefile>=0.47"]
excel = ["openpyxl>=3.1.0"]
sparams = ["numpy>=1.26"]
ground = ["networkx>=3.2"]
pdf = ["pymupdf>=1.24.0"]
all = [
    "olefile>=0.47",
    "openpyxl>=3.1.0",
    "numpy>=1.26",
    "networkx>=3.2",
    "pymupdf>=1.24.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "cairosvg>=2.7",
    "python-docx>=1.1",
    "flask>=3.0",
]
report = [
    "cairosvg>=2.7",
    "python-docx>=1.1",
]
web = [
    "flask>=3.0",
]

[project.urls]
Homepage = "https://github.com/RFingAdam/mcp-pcb-emcopilot"
Documentation = "https://github.com/RFingAdam/mcp-pcb-emcopilot#readme"
Repository = "https://github.com/RFingAdam/mcp-pcb-emcopilot"
Issues = "https://github.com/RFingAdam/mcp-pcb-emcopilot/issues"

[project.scripts]
mcp-pcb-emcopilot = "mcp_pcb_emcopilot.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pcb_emcopilot"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — 120-col limit handles readability
    "E741",   # ambiguous names (l, I, O) — engineering formulas routinely use these
    "E701",   # multiple statements on one line — compact patterns
    "UP006",  # use X | Y instead of Union — supporting Python 3.9+
    "UP007",  # use X | Y instead of Optional — supporting Python 3.9+
    "UP035",  # deprecated typing imports — supporting Python 3.9+
    "UP038",  # isinstance(x, (A, B)) → A | B — idiomatic tuple is fine
]

[tool.ruff.lint.per-file-ignores]
# __init__.py intentionally re-exports many names
"**/__init__.py" = ["F401"]
# Test fixtures have unused args/vars by pytest convention
"tests/**/*.py" = ["F841", "B007", "B011"]
# Intermediate calculations in analyzers/classifiers/parsers/reports are often
# named to document the formula step (e.g. complementary modulus ``k0_prime``)
# even if not re-referenced. Losing the name reduces the readability of the
# implementation — analyzer correctness is enforced by tests, not unused-var.
"src/mcp_pcb_emcopilot/analyzers/**/*.py" = ["F841", "B007"]
"src/mcp_pcb_emcopilot/classifiers/**/*.py" = ["F841", "B007"]
"src/mcp_pcb_emcopilot/parsers/**/*.py" = ["F841", "B007"]
"src/mcp_pcb_emcopilot/reports/**/*.py" = ["F841", "B007"]
"src/mcp_pcb_emcopilot/server.py" = ["F841"]
"src/mcp_pcb_emcopilot/orchestrator.py" = ["F841"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Numpy/matplotlib heavy modules — numpy stubs and matplotlib API signatures
# produce many spurious type errors with tolist(), fill_between(), etc.
[[tool.mypy.overrides]]
module = [
    "mcp_pcb_emcopilot.reports.simulation_plots",
    "mcp_pcb_emcopilot.analyzers.emc.filter_design",
]
ignore_errors = true

# Dispatch-style modules: 100+-branch ``if name == "..."`` functions
# rebind the same local names (``analyzer``, ``renderer``, ``parser``) to
# different classes per branch by design. mypy cannot track the union
# without a tag, and peppering every branch with ``# type: ignore`` tokens
# both fails to silence the real issue (the rebinding) and clutters the
# code. The runtime contract is enforced by the comprehensive smoke test
# in ``tests/test_all_tools_smoke.py`` which invokes every branch.
[[tool.mypy.overrides]]
module = [
    "mcp_pcb_emcopilot.server",
]
ignore_errors = true

# ``current_profiler`` and ``review_context`` read deeply-nested dicts of
# mixed numeric types (int / float / Decimal) via ``dict.get("key", 0)``.
# Each call is correct at runtime — the helper's return type is narrower
# than the dict-value union, so ``warn_return_any`` fires on every lookup.
# Suppressing at module level keeps the rule useful elsewhere.
[[tool.mypy.overrides]]
module = [
    "mcp_pcb_emcopilot.analyzers.power_integrity.current_profiler",
    "mcp_pcb_emcopilot.review_context",
]
disable_error_code = ["no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
