[project]
name = "mcp-pcb-emcopilot"
version = "0.3.0"
description = "MCP server for PCB design review, EMC analysis, and signal integrity"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Adam Engelbrecht", email = "adam@rfingadam.com" }
]
keywords = ["mcp", "pcb", "emc", "signal-integrity", "design-review", "gerber", "rf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "matplotlib>=3.10.8",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
altium = ["olefile>=0.47"]
excel = ["openpyxl>=3.1.0"]
sparams = ["numpy>=1.26"]
ground = ["networkx>=3.2"]
pdf = ["pymupdf>=1.24.0"]
sexpdata = ["sexpdata>=1.0.0"]
all = [
    "olefile>=0.47",
    "openpyxl>=3.1.0",
    "numpy>=1.26",
    "networkx>=3.2",
    "pymupdf>=1.24.0",
    "sexpdata>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    # Pin ruff to a version that knows the UP04x rules referenced in
    # [tool.ruff.lint].ignore — older ruff (<0.9) fails to parse the
    # config with "Unknown rule selector: UP045".
    "ruff>=0.9.0,<1.0",
    "mypy>=1.10",
    "cairosvg>=2.7",
    "python-docx>=1.1",
    "sexpdata>=1.0.0",
]
report = [
    "cairosvg>=2.7",
    "python-docx>=1.1",
]

[project.urls]
Homepage = "https://github.com/RFingAdam/mcp-pcb-emcopilot"
Documentation = "https://github.com/RFingAdam/mcp-pcb-emcopilot#readme"
Repository = "https://github.com/RFingAdam/mcp-pcb-emcopilot"
Issues = "https://github.com/RFingAdam/mcp-pcb-emcopilot/issues"

[project.scripts]
mcp-pcb-emcopilot = "mcp_pcb_emcopilot.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pcb_emcopilot"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line too long
    "E741",   # ambiguous variable names (l, I, O) — common in engineering formulas
    "UP006",  # use X | Y instead of Union (not supported in Python 3.9)
    "UP045",  # use X | Y instead of Optional
    "F401",   # imported but unused — re-exports in __init__.py
    "F841",   # local variable assigned but never used — intermediate calculations
    "B007",   # loop control variable not used — intentional patterns
    "B011",   # assert False — used in test stubs
    "B904",   # raise without from — pre-existing pattern
    "B905",   # zip without strict= — pre-existing pattern
    "UP035",  # deprecated typing imports — supporting Python 3.9+
    "E701",   # multiple statements on one line — compact patterns
    "E722",   # bare except — pre-existing pattern
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Numpy/matplotlib heavy modules — numpy stubs and matplotlib API signatures
# produce many spurious type errors with tolist(), fill_between(), etc.
[[tool.mypy.overrides]]
module = [
    "mcp_pcb_emcopilot.reports.simulation_plots",
    "mcp_pcb_emcopilot.analyzers.emc.filter_design",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
